package comp1110.ass2;

public class Shape {
    private String shapeType; // e.g., "T", "L", etc.
    private Position[] shapePositions;

    public Shape(String shapeType, Position[] shapePositions) {
        this.shapeType = shapeType;
        this.shapePositions = shapePositions;
    }



}
